# Algorithm-Proj

Algorithm Project/: link to google drive video recordings.rtf
Algorithm Project/Code/task10_code/: task10.cpp
Algorithm Project/Code/task1_code/: BruteForce.cpp  ConstraintPropagation.cpp  DivideAndConquer.cpp  GraphBased_Coloring.cpp
Algorithm Project/Code/task2_code/: task2.cpp
Algorithm Project/Code/task3_code/: HanoiTower.pro  hanoi.cpp  hanoi.h  hanoiwidget.cpp  hanoiwidget.h  main.cpp  mainwindow.cpp  mainwindow.h
Algorithm Project/Code/task4_code/: task4.cpp
Algorithm Project/Code/task5_code/: task5.cpp
Algorithm Project/Code/task6_code/: pseudo.txt  task6.cpp
Algorithm Project/Code/task7_code/: BruteForce.cpp  DivideAndConquer.cpp  DynamicProgramming.cpp
Algorithm Project/Code/task8_code/: CMakeLists.txt  graphwidget.cpp  graphwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mincut.h
Algorithm Project/Code/task9_code/: BruteForce.cpp  DivideAndConquer.cpp  IterativeImprovement.cpp
